spacing needs to be fix on the project section

--- a/style/index.css
+++ b/style/index.css
@@ -73,7 +73,7 @@ p{
     width:60%;
     height: 20rem;
     text-align: center;
-    
+    margin: auto;
 }
 .image{
     width: 100%;
@@ -84,20 +84,18 @@ p{
     background-position: center;
 }
 .container{
-    padding: 1rem 20rem;
     width:80%;
-    margin: 10%;
+    margin: auto;
     display: flex;
-    align-content: space-evenly;
+    align-content: space-between;
     align-items:center;
-    padding:3% 0;
 }
 .container img{
-    width:20%;
+    width:10%;
     height:70vh;
 }
 .container p{
-    width:30%;
+    width: 30%;
     text-align: left;
     font-size: 2rem;
 }
@@ -105,7 +103,6 @@ p{
     background-color: peachpuff;
     height: 20rem;
     width: 100%;
-    
 }
 #contact h2{
     height: 10%;
@@ -114,6 +111,6 @@ p{
     background-color: plum;
     width:10%;
     text-align: center;
-
+    margin: auto;
 
 }
